<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dnd.android.dndreferenceapp.FragmentAttributes">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/text_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/strength"
                        android:textColor="@color/black"
                        android:textSize="@dimen/attribute_size" />

                    <TextView
                        android:id="@+id/tStrModifier"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />

                    <EditText
                        android:id="@+id/etStrength"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:textSize="@dimen/input_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/text_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dexterity"
                        android:textColor="@color/black"
                        android:textSize="@dimen/attribute_size" />

                    <TextView
                        android:id="@+id/tDexModifier"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />

                    <EditText
                        android:id="@+id/etDexterity"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:textSize="@dimen/input_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/text_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/constitution"
                        android:textColor="@color/black"
                        android:textSize="@dimen/attribute_size" />

                    <TextView
                        android:id="@+id/tConModifier"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />

                    <EditText
                        android:id="@+id/etConstitution"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:textSize="@dimen/input_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/text_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/intelligence"
                        android:textColor="@color/black"
                        android:textSize="@dimen/attribute_size" />

                    <TextView
                        android:id="@+id/tIntModifier"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />

                    <EditText
                        android:id="@+id/etIntelligence"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:textSize="@dimen/input_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/text_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wisdom"
                        android:textColor="@color/black"
                        android:textSize="@dimen/attribute_size" />

                    <TextView
                        android:id="@+id/tWisModifier"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />

                    <EditText
                        android:id="@+id/etWisdom"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:textSize="@dimen/input_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/text_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/charisma"
                        android:textColor="@color/black"
                        android:textSize="@dimen/attribute_size" />

                    <TextView
                        android:id="@+id/tChaModifier"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />

                    <EditText
                        android:id="@+id/etCharisma"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:textSize="@dimen/input_size" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/attributes"
                android:textColor="@color/black"
                android:textSize="@dimen/input_size" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proficiency"
                        android:textColor="@color/black"
                        android:textSize="@dimen/input_size" />

                    <TextView
                        android:id="@+id/tProficiency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/armor_class"
                        android:textColor="@color/black"
                        android:textSize="@dimen/input_size" />

                    <TextView
                        android:id="@+id/tArmorClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initiative"
                        android:textColor="@color/black"
                        android:textSize="@dimen/input_size" />

                    <TextView
                        android:id="@+id/tInitiative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textColor="@color/black"
                        android:textSize="@dimen/input_size" />

                    <TextView
                        android:id="@+id/tSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/modifier_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inspiration"
                        android:textColor="@color/black"
                        android:textSize="@dimen/input_size" />

                    <CheckBox
                        android:id="@+id/cbInspiration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cbSVStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/input_size"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Hello" />
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Hello" />

        </android.support.v7.widget.CardView>
    </LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

</LinearLayout>